manifest/base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: kubedoom
  labels:
    istio-injection: enabled
    zarf.dev/agent: ignore
