manifest/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kubedoom
  name: kubedoom-svc
  namespace: kubedoom
spec:
  selector:
    app: kubedoom
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
    - name: vnc
      port: 5900
      protocol: TCP
      targetPort: 5900
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kubedoom
  namespace: kubedoom
spec:
  gateways:
    - istio-system/public
  hosts:
    - kubedoom.bigbang.dev
  http:
    - route:
        - destination:
            host: kubedoom-svc.kubedoom.svc.cluster.local
            port:
              number: 80
